moved visibility transition from individual links to mobile menu to stop the div blocking clicks

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -3,6 +3,7 @@
 @import 'skills'
 @import 'portfolio'
 @import 'topnav'
+@import 'contact'
 
 body
   background: $primary-col
@@ -46,6 +47,3 @@ section
 
 .fa
   font-size: $font-size-regular * 3
-
-address
-  font-style: normal
